# TCASLCore

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
examples/: realtime_predict.py  static_predict.py
src/tcasl/: __init__.py  core.py
