[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tcasl"
version = "1.0.0"
description = "Python library for temporal contrast American Sign Language classification."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Keshav Shankar", email = "keshavshankar08@gmail.com" }
]
dependencies = [
    "opencv-python",
    "numpy",
    "torch",
    "torchvision",
    "pillow"
]
requires-python = ">=3.7"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["tcasl"] 

[project.urls]
Homepage = "https://github.com/TODO"
Issues = "https://github.com/TODO/issues"